--- a/Website/products.html
+++ b/Website/products.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul id="MenuItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Product</a></li>
+                    <li><a href="products.html">Product</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="account.html">Account</a></li>
